# benchmark-inference-frameworks

./: .pre-commit-config.yaml  CLAUDE.md  EXTRA_SOURCE.md  README.md  SEPARATION_GUIDE.md  benchmark.py  chat_interface.py  fair-benchmark.md  generation.py  gpt2.py  inference.py  llama3.py  main.py  model_config.py  optimal-gpu-memory-for-large-models.md  pyproject.toml  pytorch-backend.py  pytorch_only.py  quantization.py  research-todo.md  ruff_results.json  spec.md  test_compilation_options.py  tinygrad_only.py  tokenizer.py  web_api.py
.claude/: CLAUDE.md
.github/workflows/: ci.yml  lint.yml  quality.yml  security.yml  test.yml
docs/: CLAUDE.md  LINTING.md  README.md  architecture.md  benchmarking.md  development.md  optimal-gpu-memory-for-large-models.md  research.md  user-guide.md
extra/: bench_log.py  training.py
scripts/: lint.py
src/: __init__.py  benchmark.py  benchmark_classes.py  benchmark_v2.py  framework_executors.py  framework_factory.py  main.py  play.py  pytorch-backend.py
src/backends/: __init__.py  pytorch_backend.py  tinygrad_backend.py
src/benchmark/: __init__.py  benchmark.py  benchmark_results.py  benchmark_run.py  benchmark_runner.py  benchmark_suite.py  cli_parser.py  executor_factory.py  framework_executor.py  time_tracking.py
src/common/: __init__.py  benchmark.py  chat_interface.py  factory.py  generation.py  inference_engine.py  model_interface.py  web_api.py
src/frameworks/hybrid/llama/: accelerated_inference.py  accelerated_llama.py  hybrid_model.py  pytorch_bridge.py
src/frameworks/pytorch/: backend.py  executor.py
src/frameworks/pytorch/llama/: pytorch-pure.py
src/frameworks/tinygrad/: __init__.py  executor.py  tokenizer.py
src/frameworks/tinygrad/backends/: tinygrad_backend.py
src/frameworks/tinygrad/common/: chat_interface.py  generation.py  hf_tokenizer.py  proper_hf_tokenizer.py
src/frameworks/tinygrad/gpt/: gpt2.py  gpt_model.py
src/frameworks/tinygrad/llama/: inference.py  llama3.py  llama_model.py  model_config.py
src/frameworks/tinygrad/llama/extra/: llama.py  training.py
src/frameworks/tinygrad/llama/extra/models/: llama.py
src/gpt/: __init__.py  gpt2.py
src/llama/: __init__.py  inference.py  llama3.py  model_config.py
src/llama/extra/models/: transformer.py
src/scripts/: lint.py
