[project]
name = "tinygrad-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "safetensors>=0.6.2",
    "tinygrad>=0.11.0",
    "transformers>=4.56.1",
    "sentencepiece>=0.1.99",
    "tiktoken>=0.5.0",
    "blobfile>=2.0.0",
    "huggingface-hub>=0.34.4",
]
